# signlanguage-translation-augmented

./: .env.example  .gitignore  README.md  agents.md  docker-compose.augmentation.yml  pyproject.toml  requirements.txt  show_examples.py  test_model.py
dataset_formatting/content4all/: format_vrt_news.py  gen_annotations.ipynb
dataset_formatting/gsl/: gsl.ipynb  pose_method_test.ipynb  pose_visualization.ipynb
dataset_formatting/isl/: pose_processing.ipynb  pose_processing.py
dataset_formatting/lsat/: format_keys.ipynb  format_keys.py  format_mirror.ipynb
dataset_formatting/lsfb-cont/: process.ipynb
dataset_formatting/rwth/: draw_pose.ipynb  format_db.ipynb  norm_poses.ipynb  rwth.ipynb
docker/: Dockerfile.export  docker-compose.export.yml  docker-compose.training.yml
docker/augmentation/: Dockerfile
docs/: DATASET_EXPORT_1024.md  README.md  RESOURCE_CONSTRAINTS.md  TRAINING_STRATEGY.md
docs/thesis/: bibliografia.bib  exemplo-tcc.tex
explanations/: SLT_PIPELINE_DOCUMENTATION.md
lib/: __init__.py
lib/posecraft/: __init__.py  transforms.py
lib/slt_datasets/: SLTDataset.py  __init__.py
scripts/: run_augmentation.sh  setup.sh
signformer/: Dockerfile  docker-compose.yml  requirements.txt
signformer/configs/: combined_augmented.yaml  combined_augmented_test.yaml  combined_vanilla.yaml  sign.yaml  sign_AdamW.yaml  sign_finetune.yaml  sign_test.yaml  sign_test_merged_rwth.yaml
signformer/experiments/augmented/: config.yaml  gls.vocab  references.dev.txt  txt.vocab  validations.txt
signformer/experiments/augmented/txt/: 1000.dev.hyp.txt  10000.dev.hyp.txt  10500.dev.hyp.txt  11000.dev.hyp.txt  11500.dev.hyp.txt  12000.dev.hyp.txt  12500.dev.hyp.txt  1500.dev.hyp.txt  2000.dev.hyp.txt  2500.dev.hyp.txt  3000.dev.hyp.txt  3500.dev.hyp.txt  4000.dev.hyp.txt  4500.dev.hyp.txt  500.dev.hyp.txt  5000.dev.hyp.txt  5500.dev.hyp.txt  6000.dev.hyp.txt  6500.dev.hyp.txt  7000.dev.hyp.txt  7500.dev.hyp.txt  8000.dev.hyp.txt  8500.dev.hyp.txt  9000.dev.hyp.txt  9500.dev.hyp.txt
signformer/main/: __main__.py  data.py  dataset.py  helpers.py  prediction.py  training.py
signformer/main/utils/: attention_module.py
signformer/scripts/: build_augmented_dataset.py  build_phoenix14t_ext.py
src/: hyperparameters.py
src/augmentation/: __init__.py  augment_dataset.py  back_translate.py  expand_db.ipynb  prompts.py  rate_limiter.py
src/config/: LSAT.json  RWTH_PHOENIX_2014T.json
src/export/: export_db.ipynb  export_db.py  export_how2sign.py  export_how2sign_1024.py  export_lsfb_cont.py  export_lsfb_cont_1024.py
src/interp/: __init__.py
src/training/: KeypointsTransformer.py  LightningKeypointsTransformer.py  SLTDataset_old.py  Translator.py  __init__.py
